k8s/base/backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sps-backend-deployment
  labels:
    app: sps-backend
spec:
  selector:
    matchLabels:
      app: sps-backend
  template:
    metadata:
      labels:
        app: sps-backend
    spec:
      serviceAccountName: sps-backend-sa
      automountServiceAccountToken: false
      containers:
        - name: backend-container
          image: sps-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
  strategy:
    canary:
      steps:
        - setWeight: 20
        # Tự động gọi Bài kiểm tra sức khỏe
        - analysis:
            templates:
            - templateName: success-rate
        - setWeight: 50
        - pause: {duration: 10m}

---
apiVersion: v1
kind: Service
metadata:
  name: sps-backend-service
spec:
  # Bịt lỗ hổng: Chỉ cho phép nội bộ K8s (Ingress) gọi vào, cấm ngoài gọi
  type: ClusterIP
  selector:
    app: sps-backend
  ports:
    - protocol: TCP
      port: 8080        # Cổng giao tiếp nội bộ trong K8s
      targetPort: 8080  # Cổng thực tế của Java App
