k8s/base/desktop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sps-desktop-deployment
  labels:
    app: sps-desktop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sps-desktop
  template:
    metadata:
      labels:
        app: sps-desktop
    spec:
      containers:
        - name: desktop-ai-container
          image: sps-desktop-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8550
---
apiVersion: v1
kind: Service
metadata:
  name: sps-desktop-service
spec:
  type: ClusterIP
  selector:
    app: sps-desktop
  ports:
    - protocol: TCP
      port: 8550
      targetPort: 8550
