k8s/base/kiosk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sps-kiosk-deployment
  labels:
    app: sps-kiosk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sps-kiosk
  template:
    metadata:
      labels:
        app: sps-kiosk
    spec:
      containers:
        - name: kiosk-container
          image: ichbineinhund/sps-kiosk-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sps-kiosk-service
spec:
  type: ClusterIP
  selector:
    app: sps-kiosk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
